update logger slog for zap
